--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,15 @@ version: '3.8'
 
 services:
   db:
-    image: postgres:latest
-    container_name: postgres_db
+    image: postgres
+    container_name: postgres_container
+    restart: always
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: donyscode
+      POSTGRES_PASSWORD: EndpointEasy
+      POSTGRES_DB: endpointizer_db
     ports:
-      - "5432:5432"
+      - '5499:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
